# internal/api/users_api.go
@@ -1,22 +1,23 @@
 package api
 
 import (
+	"DevIntApp/internal/app/ds"
 	"DevIntApp/internal/app/schemas"
 	"github.com/gin-gonic/gin"
-	log "github.com/sirupsen/logrus"
 	"net/http"
 )
 
 // @Summary Register a new user
-// @Description Register a new user with provided JSON data
+// @Description Registers a new user.
 // @Tags users
 // @Accept json
 // @Produce json
-// @Param body schemas.RegisterUserRequest true "User registration data"
-// @Success 200 {object} schemas.ResponseMessage "User created successfully"
+// @Param  body   body   schemas.RegisterUserRequest true "User registration data"
+// @Success 200 {object} schemas.ResponseMessage "User registered successfully"
 // @Failure 400 {object} schemas.ResponseMessage "Invalid request body"
+// @Failure 409 {object} schemas.ResponseMessage "User with this login already exists"
 // @Failure 500 {object} schemas.ResponseMessage "Internal server error"
-
+// @Router      /api/register_user [post]
 func (a *Application) RegisterUser(c *gin.Context) {
 	var request schemas.RegisterUserRequest
 	if err := c.ShouldBindJSON(&request); err != nil {
@@ -24,7 +25,7 @@ func (a *Application) RegisterUser(c *gin.Context) {
 		return
 	}
 
-	if request.Users.Login == "" || request.Users.Password == "" {
+	if request.Login == "" || request.Password == "" {
 		c.JSON(http.StatusInternalServerError, gin.H{"message": "Login or Password can not be empty"})
 		return
 	}
@@ -32,8 +33,8 @@ func (a *Application) RegisterUser(c *gin.Context) {
 		c.JSON(http.StatusInternalServerError, gin.H{"message": "Password length must be more than 4 symbols"})
 		return
 	}
-
-	err, res := a.repo.RegisterUser(request.Users)
+	requestTemp := ds.Users{Login: request.Login, Password: request.Password}
+	err, res := a.repo.RegisterUser(requestTemp)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
@@ -51,23 +52,23 @@ func (a *Application) RegisterUser(c *gin.Context) {
 // @Tags users
 // @Accept json
 // @Produce json
-// @Param body schemas.LoginUserRequest true "User login data"
-// @Success 200 {object} schemas.TokenResponse "User logged in successfully"
+// @Param body body schemas.LoginUserRequest true "User login data"
+// @Success 200 {object} schemas.ResponseMessage "User logged in successfully"
 // @Failure 400 {object} schemas.ResponseMessage "Invalid request body"
 // @Failure 500 {object} schemas.ResponseMessage "Internal server error"
-
+// @Router      /api/login_user [post]
 func (a *Application) LoginUser(c *gin.Context) {
 	var request schemas.LoginUserRequest
 	if err := c.ShouldBindJSON(&request); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
-	if request.Users.Login == "" || request.Users.Password == "" {
+	if request.Login == "" || request.Password == "" {
 		c.JSON(http.StatusInternalServerError, gin.H{"message": "Login or Password can not be empty"})
 		return
 	}
-	err, token := a.repo.LoginUser(request.Users)
-	log.Println(err)
+	requestTemp := ds.Users{Login: request.Login, Password: request.Password}
+	err, token := a.repo.LoginUser(requestTemp)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
